--- a/todo
+++ b/todo
@@ -1,5 +1,20 @@
-- when ask-to-swap send message to others
-- use websocket/broadcaster to push
-- if one accepts send message back that was accepted
+- employee-editor: assign role to employee (from drop-down)
+  The backend should save foreign key refs in employeeRole
+- create login-page
+- create message page
+- create broadcaster service
+
+- create swapper mechanism in schedule-page
+  (first allow all shift to be swapped)
+* when ask-to-swap send message to others
+* use websocket/broadcaster to push
+* if one accepts send message back that was accepted
   and change schedule of both; again use broadcaster
   to push the schedule update to clients
+
+- create schedule
+* something what works quick in mobile
+* schedule by employee/role
+* create 2h/4h/8h button -> select role -> show in editor -> ok/cancel
+* overlay from last-week
+* show problematic shifts and let fix by flowing throw process
