--- a/todo
+++ b/todo
@@ -20,3 +20,7 @@
 * create 2h/4h/8h button -> select role -> show in editor -> ok/cancel
 * overlay from last-week
 * show problematic shifts and let fix by flowing throw process
+
+- details:
+* the Employee.name must be unique
+* passwords never return in API, passwords must be md5-hashed in db
