--- a/todo
+++ b/todo
@@ -1,6 +1,11 @@
-- create message page  (list of all messages displayed as thumbmails
-  with 'read'-button, onclick: show the message in messageView, and action buttons)
-  When action buttons exists don't show 'confirm' and show 'cancel' and the actions
+- create swapper mechanism in schedule-page
+  (first allow all shift to be swapped) and add /requestSwap and /swap to API
+* when ask-to-swap send message to others - with the action: 'request swap'
+* use websocket/broadcaster to push
+* if one accepts send message back that was accepted
+  and change schedule of both; again use broadcaster
+  to push the schedule update to clients
+
 - create broadcaster service
   (broadcaster adds connections based on authenticationService.findUser(req))
   The client (has automatic reconnect as options and running in webworker)
@@ -9,14 +14,6 @@
   The check is:  connection.findSessionById(connection.sessionId) check user-attribute
   This only, in cases when the topic requires authentication. Close
   otherwise.
-
-  - create swapper mechanism in schedule-page
-    (first allow all shift to be swapped) and add /requestSwap and /swap to API
-  * when ask-to-swap send message to others - with the action: 'request swap'
-  * use websocket/broadcaster to push
-  * if one accepts send message back that was accepted
-    and change schedule of both; again use broadcaster
-    to push the schedule update to clients
 
 - redirect to login for all requests
   which are not authorized (check authorization for each request) and set
@@ -38,6 +35,7 @@
 * passwords never return in API, passwords must be md5-hashed in db
 * error-handling still bad: when new Error(err) is thrown in promise's catch
   it isn't recognized by app.error-handler, seems to be eaten by promise
+* make angular working with requirejs or system
 
 
 - bugs:
