--- a/todo
+++ b/todo
@@ -1,13 +1,3 @@
-- create swapper mechanism in schedule-page
-  (the MessageService.removeSwapRequests doesn't remove the message)
-  but this test did:
-  app.all('/test', (req, res) => {
-    services.messageService.removeSwapRequests('568a4a1f161139dd2a66316a', '568f9d905d3b1fe12e8ff82a')
-      .then((result) => {
-        res.json(result);
-      })
-  });
-
 
 - create broadcaster service
   Try to use mongoose middleware schema.post('save'/'update')
@@ -43,7 +33,7 @@
 * passwords never return in API, passwords must be md5-hashed in db
 * make angular working with requirejs or system
 * use sequelize when it comes to mysql
-* have a look at sails.js
+* have a look at sails.js - try to build all with this
 
 - bugs:
  * 1. select employee
